<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    tools:context=".ui.uiprofile.Profile">


    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="?android:selectableItemBackgroundBorderless"
        android:src="@drawable/ic_back_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/lengkapi_info_akun"
        android:layout_width="248dp"
        android:layout_height="24dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/uiprofile_title"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/iv_picture"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="40dp"
        android:clickable="true"
        android:elevation="0dp"
        android:focusable="true"
        android:foreground="?selectableItemBackgroundBorderless"
        app:cardCornerRadius="12dp"
        android:src="@drawable/ic_fi_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lengkapi_info_akun">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/edit_iv_picture"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:background="@color/light_purple"
            android:elevation="0dp"
            android:scaleType="centerCrop" />

    </com.google.android.material.card.MaterialCardView>

    <LinearLayout
        android:id="@+id/textfield_nama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24sp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/iv_picture">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uiprofile_label_nama"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_label_textfield"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_nama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uiprofile_hint_nama"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_textfield"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_textfield"
            app:boxStrokeColor="@color/main_purple"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_size_textfield"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textfield_kota"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_textfield"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textfield_nama">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uiprofile_label_kota"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_label_textfield"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_kota"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uiprofile_hint_kota"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_textfield"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_textfield"
            app:boxStrokeColor="@color/main_purple"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_size_textfield"
                android:inputType="none"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textfield_alamat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_textfield"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/textfield_kota">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uiprofile_label_alamat"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_label_textfield"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_alamat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uiprofile_hint_alamat"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_textfield"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_textfield"
            app:boxStrokeColor="@color/main_purple"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_alamat"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_size_textfield"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/textfield_nohp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_textfield"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/textfield_alamat">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/uiprofile_label_nohp"
            android:fontFamily="@font/poppins_regular"
            android:textSize="@dimen/text_size_label_textfield"
            android:textColor="@color/black"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etl_nohp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/uiprofile_hint_nohp"
            app:boxCornerRadiusBottomStart="@dimen/corner_radius_textfield"
            app:boxCornerRadiusBottomEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopEnd="@dimen/corner_radius_textfield"
            app:boxCornerRadiusTopStart="@dimen/corner_radius_textfield"
            app:boxStrokeColor="@color/main_purple"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_nohp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_regular"
                android:textSize="@dimen/text_size_textfield"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_simpan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:paddingVertical="16dp"
        android:paddingHorizontal="24dp"
        android:backgroundTint="@color/main_purple"
        android:text="@string/uiprofile_button_simpan"
        android:fontFamily="@font/poppins_medium"
        android:textSize="14sp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        app:cornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textfield_nohp"/>


</androidx.constraintlayout.widget.ConstraintLayout>